--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "engines": {
     "node": "10.14.2"
   },
-  "main": "index.js",
+  "main": "actualindex.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node actualindex.js",
+    "test": "mocha --timeout 10000"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "and": "0.0.3",
     "body-parser": "^1.18.3",
+    "build": "^0.1.4",
+    "chai-http": "^4.3.0",
     "chai-integer": "^0.1.0",
     "compression": "^1.7.3",
     "connect": "^3.6.6",
